<resources>
    <string name="app_name">WeddingU</string>
    <string name="app_name_loading">WEDDING-U!</string>
    <string name="w_logo_loading">W Logo Loading</string>
    <string name="i_logo_loading">I Logo Loading</string>
    <string name="get_started_title">Menikah anti ribet dengan Wedding-U!</string>
    <string name="get_started_desc">Wedding-U akan membantumu …</string>
    <string name="get_started_start">Mulai</string>
    <string name="sewa_gedung">Sewa \nGedung</string>
    <string name="event_organizer">Event \nOrganizer</string>
    <string name="katering">Katering</string>
    <string name="photographer">Photo &amp;\nVideographer</string>
    <string name="gedung">Gedung</string>
    <string name="eo_title">Event Organizer</string>
    <string name="photographer_title">Photo &amp; Videographer</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="message">Message</string>
    <string name="account">Account</string>


    <string name="just_married_image">Just Married Image</string>
    <string name="logo_image_desc">Logo Image</string>
    <string name="list_icon_desc">List Icon</string>
    <string name="gedung_icon_desc">Gedung Icon</string>
    <string name="eo_icon_desc">EO Icon</string>
    <string name="catering_icon_desc">Catering Icon</string>
    <string name="photographer_icon_desc">Photographer Icon</string>
    <string name="gedung_image_desc">Gedung Image</string>
    <string name="eo_image_desc">EO Image</string>
    <string name="catering_image_desc">Catering Image</string>
    <string name="photographer_image_desc">Photographer Image</string>
    <string name="search_icon_primary_color_desc">Search Icon Primary Color</string>
    <string name="cari_gedung"><font size="11">Cari Gedung</font></string>
    <string name="nama_gedung">Nama Gedung</string>
    <string name="alamat_gedung">Alamat Gedung</string>
    <string name="harga_gedung"><b>Rp 15.000.000/</b>night</string>
    <string name="luas_gedung">Luas Gedung</string>
    <string name="kapasitas">Kapasitas</string>
    <string name="profile_username">Lisa</string>
    <string name="profile_email">Lisa@gmail.com</string>
    <string name="profile_password">••••••••</string>
    <string name="profile_address">Jl Suprapto No. 13</string>
    <string name="profile_number">081234567890</string>
    <string name="profile_change"><b>Change your profile</b></string>
    <string name="contact">Kontak</string>
    <string name="masukkan_keranjang">Tambahkan Pesanan</string>
    <string name="pilih_tanggal">Pilih tanggal</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="username">Username</string>
    <string name="profile_account">Profile Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="address">Address</string>
    <string name="handphone_number">Handphone Number</string>
    <string name="list_pemesanan">List Pemesanan</string>
    <string name="harga_gedung_tanpa_rinci">Rp 0</string>
    <string name="nama_katering">Nama Katering</string>
    <string name="nama_eo">Nama EO</string>
    <string name="nama_photo">Nama Photo</string>
    <string name="total_items">Total 0 item</string>
    <string name="checkout">Checkout</string>
    <string name="listnya_masih_kosong">Listnya masih kosong. Pesan yuk!</string>
    <string name="metode_pembayaran">Metode Pembayaran</string>
    <string name="transfer_bank">Transfer Bank</string>
    <string name="total_pembayaran">Total Pembayaran</string>
    <string name="bayar">Bayar</string>
    <string name="customer_service">Customer Service</string>
    <string name="search_catering">Cari Katering</string>
    <string name="alamat_katering">Alamat Katering</string>
    <string name="gambar_catering">Gambar Catering</string>
    <string name="info_pembayaran">Info Pembayaran</string>
    <string name="no_rekening">No Rekening</string>
    <string name="bank_mandiri">Bank Mandiri</string>
    <string name="kartu_kredit">Kartu Kredit / Debit Online</string>
    <string name="transfer_nama">Nama Tertera di Kartu</string>
    <string name="transfer_nomor">No Kartu</string>
    <string name="transfer_tipe">Tipe Kartu</string>
    <string name="ketik">Ketik disini...</string>
    <string name="transfer_tangal">Tanggal Akhir Masa Berlaku</string>
    <string name="transfer_kode">Kode CVV</string>
    <string name="transfer_alamat">Alamat Tagihan</string>
    <string name="transfer_kode_pos">Kode Pos</string>
    <string name="kirim">Kirimkan</string>
    <string name="pembayaran">Pembayaran Berhasil</string>
    <string name="pembayaran_cek_1">Cek Pesanan Saya untuk info</string>
    <string name="pembayaran_cek_2">lebih lanjut</string>
    <string name="pembayaran_proses">Memproses Pembayaran</string>
    <string name="pilih_metode_pembayaran">Pilih Metode Pembayaran</string>
    <string name="petunjuk_transfer_atm">Petunjuk Transfer ATM</string>
    <string name="petunjuk_transfer_mobile_banking">Petunjuk Transfer Mobile Banking</string>
    <string name="first_text_tf_bank_mbanking">Pilih <b>m-Transfer > </b>Mandiri virtual account</string>
    <string name="second_text_tf_bank_mbanking">Masukkan nomor virtual account <b>111314346768878</b> dan pilih <b>Send</b></string>
    <string name="third_text_tf_bank_mbanking">Periksa informasi yang tertera di layar. Pastikan merchant adalah <b>Wedding - U!</b>, Total tagihan dan username sudah benar. Jika benar pilih <b>OK</b></string>
    <string name="first_text_tips_tf_atm">Pilih <b>Bayar/Beli</b></string>
    <string name="second_text_tips_tf_atm">Pilih Menu <b>Transfer</b></string>
    <string name="third_text_tips_tf_atm">Masukkan <b>kode bank</b> diikuti dengan <b>Rek. Tujuan</b></string>
    <string name="fourth_text_tips_tf_atm">Masukkan Nominal sesuai yang ada di <b>laman Info Pembayaran</b></string>
    <string name="fifth_text_tips_tf_atm">Pastikan informasi yang tertera di layar. Jika sudah benar pilih <b>OK</b></string>
    <string name="nama_photographer">Nama Fotografer</string>
    <string name="keterangan_photographer">Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. </string>
    <string name="harga_photographer"><b>Rp 3.500.000.000/</b>paket</string>

</resources>
