<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.GetStarted">

    <ImageView
        android:id="@+id/iv_get_started"
        android:layout_width="411dp"
        android:layout_height="388dp"
        android:layout_marginTop="85dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/just_married_image"
        android:src="@drawable/get_started_wedding_car"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_get_started"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_get_started"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tv_get_started_big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/get_started_title"
            android:textColor="@color/black"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/tv_get_started_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins"
            android:letterSpacing="0.1"
            android:text="@string/get_started_desc"
            android:textColor="#313131"
            android:textSize="15sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_get_started_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="end"
        android:letterSpacing="0.15"
        android:text="@string/get_started_start"
        android:textColor="@color/primary_dark"
        android:textSize="18sp"
        android:layout_margin="25dp"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>