<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll_home_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="40dp"
        android:background="@drawable/home_page_bg_gradient">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile_image_homepage"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="start"
            android:src="@drawable/ic_launcher_background"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="@id/ll_home_page"
            app:layout_constraintStart_toStartOf="parent" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/iv_profile_image_homepage"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/list_icon_homepage">

        <ImageView
            android:id="@+id/home_page_logo"
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:contentDescription="@string/logo_image_desc"
            android:src="@drawable/w_logo"
            android:layout_marginTop="8dp"
            android:elevation="20dp" />

        <TextView
            android:id="@+id/home_page_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/home_page_logo"
            app:layout_constraintTop_toTopOf="@id/home_page_logo"
            app:layout_constraintBottom_toBottomOf="@id/home_page_logo"
            app:layout_constraintEnd_toStartOf="@id/list_icon_homepage"
            android:layout_marginTop="10dp"
            android:text="@string/app_name_loading"
            android:fontFamily="@font/raleway"
            android:textColor="@color/white"
            android:letterSpacing="0.15"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/list_icon_homepage"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginTop="3dp"
            android:contentDescription="@string/list_icon_desc"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/ic_list"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="55dp"
        app:layout_constraintTop_toTopOf="@id/ll_home_page"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_nav_menu"
        android:background="@drawable/sv_homepage_bg"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:orientation="vertical"
            android:gravity="center">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager_homepage_banner"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:focusableInTouchMode="true"/>

            <me.relex.circleindicator.CircleIndicator3
                android:id="@+id/banner_indicator_homepage"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                app:ci_width="6dp"
                app:ci_height="6dp"
                android:layout_marginTop="11dp"
                app:ci_drawable="@drawable/selected_dot_indicator"
                app:ci_drawable_unselected="@drawable/unselected_dot_indicator"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="22dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                app:cardCornerRadius="30dp"
                app:cardElevation="3dp">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="95dp">

                    <ImageView
                        android:id="@+id/iv_gedung_categories"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="35dp"
                        android:layout_marginTop="11dp"
                        android:src="@drawable/ic_fsrame"
                        android:contentDescription="@string/gedung_icon_desc"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/iv_eo_categories"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="11dp"
                        android:src="@drawable/ic_eo"
                        android:contentDescription="@string/eo_icon_desc"
                        app:layout_constraintEnd_toStartOf="@id/iv_catering_categories"
                        app:layout_constraintStart_toEndOf="@id/iv_gedung_categories"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/iv_catering_categories"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:src="@drawable/ic_catering"
                        android:contentDescription="@string/catering_icon_desc"
                        app:layout_constraintEnd_toStartOf="@id/iv_photo_categories"
                        app:layout_constraintStart_toEndOf="@id/iv_eo_categories"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/iv_photo_categories"
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="40dp"
                        android:src="@drawable/ic_camera"
                        android:contentDescription="@string/photographer_icon_desc"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:lineHeight="14dp"
                        android:text="@string/sewa_gedung"
                        android:textAlignment="center"
                        android:textFontWeight="400"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="@id/iv_gedung_categories"
                        app:layout_constraintStart_toStartOf="@id/iv_gedung_categories"
                        app:layout_constraintTop_toBottomOf="@id/iv_gedung_categories" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:fontFamily="@font/poppins"
                        android:lineHeight="14dp"
                        android:text="@string/event_organizer"
                        android:textAlignment="center"
                        android:textFontWeight="400"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="@id/iv_eo_categories"
                        app:layout_constraintStart_toStartOf="@id/iv_eo_categories"
                        app:layout_constraintTop_toBottomOf="@id/iv_eo_categories" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:fontFamily="@font/poppins"
                        android:lineHeight="14dp"
                        android:text="@string/katering"
                        android:textAlignment="center"
                        android:textFontWeight="400"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="@id/iv_catering_categories"
                        app:layout_constraintStart_toStartOf="@id/iv_catering_categories"
                        app:layout_constraintTop_toBottomOf="@id/iv_catering_categories" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:fontFamily="@font/poppins"
                        android:lineHeight="14dp"
                        android:text="@string/photographer"
                        android:textAlignment="center"
                        android:textFontWeight="400"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="@id/iv_photo_categories"
                        app:layout_constraintStart_toStartOf="@id/iv_photo_categories"
                        app:layout_constraintTop_toBottomOf="@id/iv_photo_categories" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_gedung_categories"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_marginBottom="18dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                app:cardCornerRadius="30dp"
                app:cardElevation="4dp">

                <ImageView
                    android:id="@+id/iv_gedung"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/wedding_venue"
                    android:contentDescription="@string/gedung_image_desc"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/gedung"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:layout_gravity="bottom"
                    android:padding="12dp"
                    android:layout_marginStart="12dp"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_eo_categories"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_marginBottom="18dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                app:cardCornerRadius="30dp"
                app:cardElevation="4dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/event_organizer"
                    android:contentDescription="@string/eo_image_desc"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:layout_marginEnd="12dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:padding="12dp"
                    android:shadowColor="#4A4747"
                    android:text="@string/eo_title"
                    android:textColor="@color/white"
                    android:textSize="22sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_catering_categories"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_marginBottom="18dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                app:cardCornerRadius="30dp"
                app:cardElevation="4dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/wedding_catering"
                    android:contentDescription="@string/catering_image_desc"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/katering"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:layout_gravity="bottom"
                    android:padding="12dp"
                    android:layout_marginStart="12dp"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_photographer_categories"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_marginBottom="18dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                app:cardCornerRadius="30dp"
                app:cardElevation="4dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/wedding_photographer"
                    android:contentDescription="@string/photographer_image_desc"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/photographer_title"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:layout_gravity="end|bottom"
                    android:padding="12dp"
                    android:layout_marginEnd="12dp"/>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:menu="@menu/bottom_nav_menu"/>



</androidx.constraintlayout.widget.ConstraintLayout>